[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circle-fit"
version = "0.2.1"
authors = [
    { name="Michael Klear", email="michael.r.klear@gmail.com" },
    { name="Magne Eik Lauritzen", email="mag.lauritzen@gmail.com" },
]
keywords = ["circle fitting", "data science"]
description = "A Circle Fitting Library for Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy>=1.21.0",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/AlliedToasters/circle-fit"
"Bug Tracker" = "https://github.com/AlliedToasters/circle-fit/issues"
